--- a/bookcovercoding fixed/miniproject.html
+++ b/bookcovercoding fixed/miniproject.html
@@ -5,7 +5,7 @@
 
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" href="miniproject.css" />
+	<link rel="stylesheet" href="/bookcovercodingfixed/miniproject.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
 	<title>Book Cover Animation</title>
